// Copyright 2016-2022 Fraunhofer AISEC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
//           $$\                           $$\ $$\   $$\
//           $$ |                          $$ |\__|  $$ |
//  $$$$$$$\ $$ | $$$$$$\  $$\   $$\  $$$$$$$ |$$\ $$$$$$\    $$$$$$\   $$$$$$\
// $$  _____|$$ |$$  __$$\ $$ |  $$ |$$  __$$ |$$ |\_$$  _|  $$  __$$\ $$  __$$\
// $$ /      $$ |$$ /  $$ |$$ |  $$ |$$ /  $$ |$$ |  $$ |    $$ /  $$ |$$ | \__|
// $$ |      $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$\ $$ |  $$ |$$ |
// \$$$$$$\  $$ |\$$$$$   |\$$$$$   |\$$$$$$  |$$ |  \$$$   |\$$$$$   |$$ |
//  \_______|\__| \______/  \______/  \_______|\__|   \____/  \______/ \__|
//
// This file is part of Clouditor Community Edition.

syntax = "proto3";

package clouditor.runtime.v1;

import "google/protobuf/timestamp.proto";

option go_package = "clouditor.io/clouditor/v2/api/runtime;runtime";

message Runtime {
  // release_version is the latest Clouditor release version for this commit
  optional string release_version = 1;

  // vcs is the used version control system
  string vcs = 2;

  // commit_hash is the current Clouditor commit hash
  string commit_hash = 3;

  // commit_time is the time of the Clouditor commit
  google.protobuf.Timestamp commit_time = 4;

  // golang_version is the used golang version
  string golang_version = 5;

  // dependency is a list of used runtime dependencies
  repeated Dependency dependencies = 6;
}

message Dependency {
  string path = 1;
  string version = 2;
}

message GetRuntimeInfoRequest {}
